examples/test/testpolicy9998.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9998
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key24: value34
      key36: value21
      key47: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value28
          key45: value17
          key9: value5
      podSelector:
        matchLabels:
          key12: value38
